gcc/testsuite/gdc.test/compilable/dtoh_unittest_block.d
/*
REQUIRED_ARGS: -HC -c -o-
PERMUTE_ARGS:
TEST_OUTPUT:
---
// Automatically generated by Digital Mars D Compiler

#pragma once

#include <assert.h>
#include <math.h>
#include <stddef.h>
#include <stdint.h>


---
*/

unittest
{
    extern (C++) int foo(int x)
    {
        return x * 42;
    }
}
